--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p class="newsletter_description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
             <div class="sub_module-wrapper">
               <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter_subscribe">
-                <input class="subscribe" type="email" placeholder="Ваш e-mail" name="newsletter-email" >
+                <input class="subscribe" type="email" placeholder="Ваш e-mail" name="newsletter-email" required>
                 <button type="submit" class="subscribe_button">Подписаться</button>
               </form>
             </div>
@@ -179,21 +179,21 @@
 
           <ul class="social_list">
             <li class="social_list_item-vk">
-              <a class="button" href="https://vk.com/htmlacademy">
+              <a class="button" target="_blank" href="https://vk.com/htmlacademy">
                 <svg class="vk-svg social-icon" aria-hidden="true" focusable="false" width="25" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.1 1c.2-.6 0-1-.8-1h-2.6c-.7 0-1 .3-1.1.7 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.8-.9h-4c-.5 0-.8.3-.8.6 0 .6 1 .8 1 2.5V7c0 .8 0 1-.4 1-.9 0-3-3.2-4.3-6.9-.3-.7-.5-1-1.2-1H1.6C.8 0 .6.3.6.7c0 .7 1 4.1 4.2 8.6 2.2 3 5.2 4.7 8 4.7 1.7 0 1.9-.4 1.9-1v-2.3c0-.8.2-.9.7-.9.4 0 1 .2 2.6 1.7 1.8 1.7 2 2.5 3 2.5h2.7c.7 0 1.1-.4 1-1.1-.3-.7-1.2-1.8-2.3-3L20.6 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"/></svg>
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
 
             <li class="social_list_item-yt">
-              <a class="button" href="tg://resolve?domain=htmlacademy">
+              <a class="button" target="_blank" href="tg://resolve?domain=htmlacademy">
                 <svg class="yt-svg social-icon" aria-hidden="true" focusable="false" width="18" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.8.1.8 6.2c-1 .5-1 1-.2 1.4l4.1 1.2 9.5-6c.5-.2.9 0 .5.2l-7.6 7-.3 4.2c.4 0 .6-.2.8-.4l2-2 4.1 3c.8.5 1.3.3 1.5-.6L18 1.4c.3-1.1-.4-1.6-1.1-1.3Z" /></svg>
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
 
             <li class="social_list_item-tg">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="button" target="_blank" href="https://www.youtube.com/user/htmlacademyru">
                 <svg class="tg-svg social-icon" aria-hidden="true" focusable="false" width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 .5H3.4C1.6.5.3 2.1.3 3.9v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.9C22.1 2.1 20.8.5 19 .5ZM8 13V5l7.3 4L8 13Z" /></svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
@@ -206,7 +206,7 @@
         </address>
 
         <p class="about-text">
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+          <a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
             <svg class="html-svg social-icon" aria-hidden="true" focusable="false" width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
             <path d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z" />
@@ -228,24 +228,24 @@
       </div>
     </footer>
 
-    <div class="modal-container turn-off-modal  visually-hidden">
+    <div class="modal-container turn-off-modal ">
         <div class="modal">
 
-          <span class="closing-modal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg>
-          </span>
+          <button class="closing-modal" aria-label="Закрыть окно.">
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" title="Закрыть окно." fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg>
+          </button>
 
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="calendar-hotel calendar-hotel-off" action="https://echo.htmlacademy.ru" method="post">
             <div class="calendar-line">
               <label for="arrivals">Дата Заезда:</label>
-              <input class="arrival-date" type="text" name="arrivals" id="arrivals" value="27 апреля 2020">
+              <input class="arrival-date" type="text" name="arrivals" id="arrivals" value="27 апреля 2020" required>
               <span class="error-data">Мы не можем отправить вас в прошлое.</span>
             </div>
 
             <div class="calendar-line">
              <label for="departure">Дата Выезда:</label>
-             <input class="departure-date" type="text" name="departure" id="departure" value="1 сентября 2023">
+             <input class="departure-date" type="text" name="departure" id="departure" value="1 сентября 2023" required>
              <span class="correct-date">На эти даты есть свободные номера. Пока есть.</span>
             </div>
 
@@ -257,7 +257,7 @@
                   <button class="plus-minus" type="submit">
                     <svg class="-class" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0v2h14V0H0Z" fill="" fill-opacity=".3"/></svg>
                   </button>
-                  <input class="adult-choose" type="text" name="adult" id="adult" value="2">
+                  <input class="adult-choose" type="text" name="adult" id="adult" value="2" required>
                   <button class="plus-minus" type="submit">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="" fill-opacity=".3"/></svg>
                   </button>
@@ -277,7 +277,7 @@
                 <button class="plus-minus" type="submit">
                   <svg class="-class" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0v2h14V0H0Z" fill="" fill-opacity=".3"/></svg>
                 </button>
-                <input class="children-choose" type="text" name="children" id="children" value="2">
+                <input class="children-choose" type="text" name="children" id="children" value="2" required>
                 <button class="plus-minus" type="submit">
                   <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="" fill-opacity=".3"/></svg>
                 </button>
