Правит ссылки картинки и фоны

--- a/catalog.html
+++ b/catalog.html
@@ -157,9 +157,13 @@
                     </div>
 
                     <ul class="hotels-list">
-                      <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels-catalog/hotel-1.jpg" alt="Фотография отеля Amara Resort & Spa." width="300" height="212">
-                        <h3 class="hotel_title">Amara Resort & Spa</h3></a>
+                      <li class="hotel_card">
+                        <a href="#" class="hotel_card_link">
+                          <img class="hotel-photo" src="images/hotels-catalog/hotel-1.jpg" alt="Фотография отеля Amara Resort & Spa." width="300" height="212">
+                        </a>
+                        <a href="#" class="hotel_card_link">
+                          <h3 class="hotel_title">Amara Resort & Spa</h3>
+                        </a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
                           <span class="hotel_price">От 4000 ₽</span>
@@ -172,9 +176,13 @@
                         </div>
                       </li>
 
-                      <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels-catalog/hotel-2.jpg" alt="Фотография отеля Villas at Poco Diablo." width="300" height="212">
-                        <h3 class="hotel_title">Villas at Poco Diablo</h3></a>
+                      <li class="hotel_card">
+                        <a href="#" class="hotel_card_link">
+                          <img class="hotel-photo" src="images/hotels-catalog/hotel-2.jpg" alt="Фотография отеля Villas at Poco Diablo." width="300" height="212">
+                        </a>
+                        <a href="#" class="hotel_card_link">
+                          <h3 class="hotel_title">Villas at Poco Diablo</h3>
+                        </a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
                           <span class="hotel_price">От 5000 ₽</span>
@@ -187,9 +195,12 @@
                         </div>
                       </li>
 
-                      <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels-catalog/hotel-3.jpg" alt="Фотография отеля Desert Quail Inn." width="300" height="212">
-                        <h3 class="hotel_title">Desert Quail Inn</h3></a>
+                      <li class="hotel_card">
+                        <a href="#" class="hotel_card_link">
+                          <img class="hotel-photo" src="images/hotels-catalog/hotel-3.jpg" alt="Фотография отеля Desert Quail Inn." width="300" height="212"></a>
+                        <a href="#" class="hotel_card_link">
+                          <h3 class="hotel_title">Desert Quail Inn</h3>
+                        </a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
                           <span class="hotel_price">От 2500 ₽</span>
@@ -202,9 +213,13 @@
                         </div>
                       </li>
 
-                      <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels-catalog/hotel-4.jpg" alt="Фотография отеля GreenTree Inn." width="300" height="212">
-                        <h3 class="hotel_title">GreenTree Inn</h3></a>
+                      <li class="hotel_card">
+                        <a href="#" class="hotel_card_link">
+                          <img class="hotel-photo" src="images/hotels-catalog/hotel-4.jpg" alt="Фотография отеля GreenTree Inn." width="300" height="212">
+                        </a>
+                        <a href="#" class="hotel_card_link">
+                          <h3 class="hotel_title">GreenTree Inn</h3>
+                        </a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
                           <span class="hotel_price">От 1500 ₽</span>
