Правки по валидатору

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
           <div class="breadcrumbs-wrapper">
             <h1 class="inner_header_title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
-                <li class="breadcrumbs_item breadcrumbs_item-home"><a href="index.html"> <img src="images/icons/main-icon.svg" alt="На главную" width="13px" height="13px"> </a></li>
+                <li class="breadcrumbs_item breadcrumbs_item-home"><a href="index.html"> <img src="images/icons/main-icon.svg" alt="На главную" width="13" height="13"> </a></li>
                 <li class="breadcrumbs_item breadcrumbs_item-vector"><div class="vector-right"><span class="visually-hidden">Обозначение положения на сайте.</span></div></li>
                 <li class="breadcrumbs_item breadcrumbs_item-current"><a href="#">Гостиницы</a></li>
             </ul>
@@ -144,13 +144,13 @@
 
                       <div class="options_icons-wrapper">
                       <a class="button button_bold button_table-view" href="#">
-                        <img class="view-icon-image" width="16px" height="14px" src="images/icons/table-view.png" alt="Показать таблицей.">
+                        <img class="view-icon-image" width="16" height="14" src="images/icons/table-view.png" alt="Показать таблицей.">
                       </a>
                       <a class="button button_light button_card-view" href="#">
-                        <img class="view-icon-image" width="16px" height="14px" src="images/icons/hotel-description_view.png" alt="Показать карточками.">
+                        <img class="view-icon-image" width="16" height="14" src="images/icons/hotel-description_view.png" alt="Показать карточками.">
                       </a>
                       <a class="button button_light button_list-view" href="#">
-                        <img class="view-icon-image" width="16px" height="14px" src="images/icons/list-view.png" alt="Показать списком." >
+                        <img class="view-icon-image" width="16" height="14" src="images/icons/list-view.png" alt="Показать списком." >
                       </a>
 
                       </div>
@@ -313,7 +313,7 @@
         </address>
 
         <p class="about-text">
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/ target="_blank"">
+          <a class="htmlacademy-link" target="_blank" href="https://htmlacademy.ru/">
             <svg class="html-svg social-icon" aria-hidden="true" focusable="false" width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
             <path d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z" />
