--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <p class="advantages_description advantages_description_white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages_photo-wrapper">
-              <img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="100%" alt="Фотография городка.">
+              <img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="385" alt="Фотография городка.">
             </div>
 
           <li class="advantages_item advantages-soft-blue">
@@ -101,7 +101,7 @@
               <p class="advantages_description advantages_description_white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <div class="advantages_photo-wrapper advantages_photo-wrapper-bridge">
-              <img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="100%" alt="Фотография моста дьявола.">
+              <img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="385" alt="Фотография моста дьявола.">
             </div>
           </li>
 
@@ -232,7 +232,7 @@
         <div class="modal">
 
           <button class="closing-modal" aria-label="Закрыть окно.">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" title="Закрыть окно." fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg>
           </button>
 
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
